--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,6 @@ annotation.processing.enabled.in.editor=true
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js/libs
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -29,8 +28,6 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.java-json.jar=C:\\Users\\Administrateur\\Documents\\NetBeansProjects\\java-json.jar
-file.reference.mysql-connector-java-5.1.44-bin.jar=C:\\Users\\Administrateur\\Desktop\\mysql-connector-java-5.1.44\\mysql-connector-java-5.1.44-bin.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -45,8 +42,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.44-bin.jar}:\
-    ${file.reference.java-json.jar}
+    ${libs.spring-framework400.classpath}:\
+    ${libs.jstl.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -68,12 +65,12 @@ javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.preview=true
 javadoc.private=false
-javadoc.reference.mysql-connector-java-5.1.44-bin.jar=C:\\Users\\Administrateur\\Documents\\NetBeansProjects\\mysql-connector-java-5.1.44-bin.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
+no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
@@ -89,6 +86,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=TP1Web.war
+war.name=BeardedCraftWebsite.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
